@@ -1,14 +1,15 @@
-#	$NetBSD: Makefile,v 1.11 2006/08/26 18:14:28 christos Exp $
+#	$NetBSD: Makefile,v 1.12 2010/04/11 08:23:52 hannken Exp $
 
 .include <bsd.own.mk>
 
 PROG=	fsck_msdos
 MAN=	fsck_msdos.8
-SRCS=	main.c check.c boot.c fat.c dir.c fsutil.c
+SRCS=	main.c check.c boot.c fat.c dir.c fsutil.c snapshot.c
 
 FSCK=	${NETBSDSRCDIR}/sbin/fsck
-CPPFLAGS+= -I${FSCK}
-.PATH:	${FSCK}
+DUMP=	${NETBSDSRCDIR}/sbin/dump
+CPPFLAGS+= -I${FSCK} -I${DUMP}
+.PATH:	${FSCK} ${DUMP}
 
 LDADD+=-lutil
 DPADD+=${LIBUTIL}
